--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -18,13 +18,27 @@ jobs:
       with:
         python-version: '3.9'
     
-    - name: Chrome 설치
-      uses: browser-actions/setup-chrome@latest
+    - name: Chrome과 ChromeDriver 설치
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+        
+        # ChromeDriver 설치
+        CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | awk -F. '{print $1}')
+        CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+        
+        wget -q "https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip"
+        unzip -o chromedriver_linux64.zip
+        sudo mv chromedriver /usr/local/bin/
+        sudo chmod +x /usr/local/bin/chromedriver
+        
+        # 버전 확인
+        google-chrome --version
+        chromedriver --version
     
     - name: 의존성 설치
       run: |
         pip install selenium==4.15.0
-        pip install webdriver-manager==4.0.1
         pip install pytz
         
     - name: 크롤링 실행
