--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -18,12 +18,14 @@ jobs:
       with:
         python-version: '3.9'
     
-    - name: 의존성 설치
+    - name: Playwright 설치
       run: |
-        pip install selenium==4.15.0
-        pip install webdriver-manager==4.0.1
+        pip install playwright==1.40.0
         pip install pytz
-        pip install requests
+        # Playwright 브라우저 설치 (자동으로 Chromium 설치)
+        playwright install chromium
+        # 의존성 설치
+        playwright install-deps
         
     - name: 크롤링 실행
       run: |
@@ -32,16 +34,27 @@ jobs:
     - name: 디버그 정보 출력
       if: always()
       run: |
-        echo "=== data.json 내용 ==="
-        cat data.json | head -20
+        echo "=== data.json 파일 확인 ==="
+        if [ -f data.json ]; then
+          echo "파일 크기: $(ls -lh data.json | awk '{print $5}')"
+          echo "처음 10줄:"
+          head -10 data.json
+        else
+          echo "data.json 파일이 없습니다!"
+        fi
+        
         echo ""
-        echo "=== 파일 크기 ==="
-        ls -la data.json
+        echo "=== 디버그 스크린샷 확인 ==="
+        if [ -f debug_screenshot.png ]; then
+          echo "디버그 스크린샷이 생성되었습니다."
+        fi
     
     - name: 데이터 커밋 및 푸시
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        
+        # data.json 추가
         git add data.json
         
         # 디버그 스크린샷이 있으면 추가
@@ -50,9 +63,9 @@ jobs:
         fi
         
         # 변경사항이 있을 때만 커밋
-        if ! git diff --cached --quiet; then
+        if git diff --staged --quiet; then
+          echo "변경사항 없음"
+        else
           git commit -m "🔄 자동 업데이트: $(TZ=Asia/Seoul date +'%Y-%m-%d %H:%M:%S')"
           git push
-        else
-          echo "변경사항 없음"
         fi
